# wpcg-py

./: .gitignore  Readme.md  build-ui.py  build-ui.sh  build.bat  build.ps1  build.sh  package.ps1  pyproject.toml  requirements.txt  wpcg.desktop
.github/workflows/: nuitka.yml  python-app.yml
images/: export.bat
src/: main.py
src/main/python/: main.py  wpcg.py
src/main/python/business/manager/: wallpaper_changing_manager.py
src/main/python/data/dao/: config_dao.py  wallpaper_dao.py
src/main/python/data/model/: wallpaper_source_model.py
src/main/python/data/providers/: provider.py
src/main/python/icons/: icon_resources.qrc  rc_icon_resources.py
src/main/python/presentation/controller/: main_controller.py  settings_window_controller.py  web_dialog_controller.py
src/main/python/presentation/ui/: settings.py  settings.ui  ui_settings.py  ui_webDialog.py  webDialog.py
src/main/python/utils/: imageutils.py  utils.py
src/wpcg/: __about__.py  __init__.py
src/wpcg/business/manager/: wallpaper_changing_manager.py
src/wpcg/data/dao/: settings_dao.py  wallpaper_dao.py
src/wpcg/data/model/: settings_model.py
src/wpcg/data/providers/: provider.py
src/wpcg/presentation/controller/: main_controller.py  settings_window_controller.py  web_dialog_controller.py
src/wpcg/presentation/ui/: icon_resources.qrc  icon_resources_rc.py  settings.ui  ui_settings.py
src/wpcg/utils/: utils.py
src/wpcg_JakobPer/: wpcg.py
src/wpcg_JakobPer/business/manager/: wallpaper_changing_manager.py
src/wpcg_JakobPer/data/model/: settings_model.py
src/wpcg_JakobPer/presentation/ui/: icon_resources.qrc
wpcg/: wpcg.py
wpcg/business/manager/: wallpaper_changing_manager.py
wpcg/data/dao/: config_dao.py  settings_dao.py  wallpaper_dao.py
wpcg/data/model/: wallpaper_source_model.py
wpcg/data/providers/: provider.py
wpcg/icons/: rc_icon_resources.py
wpcg/presentation/controller/: main_controller.py  settings_window_controller.py
wpcg/presentation/ui/: icon_resources.qrc  icon_resources_rc.py  settings.ui  ui_settings.py  ui_webDialog.py  webDialog.ui
wpcg/utils/: imageutils.py
