[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wpcg"
dynamic = ["version"]
description = 'A simple random wallpaper changer'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-V3"
keywords = []
authors = [
  { name = "JakobPer", email = "JakobPer@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/wpcg#readme"
Issues = "https://github.com/unknown/wpcg/issues"
Source = "https://github.com/unknown/wpcg"

[tool.hatch.version]
path = "src/wpcg/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wpcg tests}"

[tool.coverage.run]
source_pkgs = ["wpcg", "tests"]
branch = true
parallel = true
omit = [
  "src/wpcg/__about__.py",
]

[tool.coverage.paths]
wpcg = ["src/wpcg", "*/wpcg/src/wpcg"]
tests = ["tests", "*/wpcg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
