[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wpcg"
dynamic = ["version"]
description = 'A simple random wallpaper changer'
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "JakobPer", email = "JakobPer@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
"certifi>=2022.12.7",
"numpy>=1.26.4",
"pillow>=10.2.0",
"PySide6>=6.6.2",
"requests>=2.31.0",
"urllib3>=2.2.1",
]

[project.urls]
Documentation = "https://github.com/JakobPer/wpcg-py#readme"
Issues = "https://github.com/JakobPer/wpcg-py/issues"
Source = "https://github.com/JakobPer/wpcg-py/issues"

[tool.hatch.version]
path = "src/wpcg/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/wpcg tests}"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.vscode",
  "/.idea",
  "/images",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wpcg"]

[tool.coverage.run]
source_pkgs = ["wpcg", "tests"]
branch = true
parallel = true
omit = [
  "src/wpcg/__about__.py",
]

[tool.coverage.paths]
wpcg = ["src/wpcg", "*/wpcg/src/wpcg"]
tests = ["tests", "*/wpcg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
